Allow searching for group names.

--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,17 @@
 <head>
   <title>Gwene</title>
+  <script type="text/javascript" src="/client/groups.js"></script> 
   <script type="text/javascript" src="/client/beam.js"></script> 
-  </head>
+  <script type="text/javascript" src="/client/general.js"></script> 
+  <link href="/client/beam.css" rel="stylesheet" type="text/css">
+</head>
 <body>
  <div class="searchBar" id="searchBar">
-   </div>
+ Search For Group: <input size=20 id="search">
+ </div>
+ <div class="searchResults" id="searchResults">
+ </div>
  <div class="roots" id="roots">
-   </div>
+ </div>
+  <script type="text/javascript">decorateHeddle();</script> 
  
