--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <head>
   <title>Gwene</title>
   <script type="text/javascript" src="/client/groups.js"></script> 
+  <script type="text/javascript" src="/client/infinite-scroll.js"></script> 
   <script type="text/javascript" src="/client/beam.js"></script> 
   <script type="text/javascript" src="/client/general.js"></script> 
   <link href="/client/beam.css" rel="stylesheet" type="text/css">
