Add a logo and top-level link.

--- a/client/group.html
+++ b/client/group.html
@@ -6,4 +6,5 @@
   <link href="/client/beam.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+ <div class="logo"><a href="/"><img src="/client/gwene.png"></a></div>
  <div class="roots" id="roots">
