Add the logo to all the pages.

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <link href="/client/beam.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+ <div class="logo"><a href="/"><img src="/client/gwene.png"></a></div>
  <div class="searchBar" id="searchBar">
  Search For Group: <input size=20 id="search">
  </div>
