--- a/client/thread.html
+++ b/client/thread.html
@@ -3,5 +3,5 @@
   <link href="/client/beam.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+ <div class="logo"><a href="/"><img src="/client/gwene.png"></a></div>
  <div class="thread">
- 
