Add an explanatory text.

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,11 @@
  Search For Group: <input size=20 id="search">
  </div>
  <div class="searchResults" id="searchResults">
+   Gwene is an RSS to NNTP gateway.  To examine the contents of the
+   news spool, search for groups in the search field above.
+   <p>
+     If you can't find the feed you want here, go to
+     the <a href="http://gwene.org/">signup page</a> and add the feed.
  </div>
  <div class="roots" id="roots">
  </div>
