Add a noscript help text.

--- a/client/index.html
+++ b/client/index.html
@@ -14,10 +14,10 @@
  <div class="searchResults" id="searchResults">
    Gwene is an RSS to NNTP gateway.  To examine the contents of the
    news spool, search for groups in the search field above.
-   <p>
      If you can't find the feed you want here, go to
      the <a href="http://gwene.org/">signup page</a> and add the feed.
  </div>
  <div class="roots" id="roots">
+ <noscript>You need JavaScript to make something happen on this page, Gunnar.</noscript>
  </div>
   <script type="text/javascript">decorateHeddle();</script> 
