Add the thumbnail to the direct-link pages, too.

--- a/client/thread.html
+++ b/client/thread.html
@@ -2,7 +2,9 @@
 <head>
   <title>Gwene</title>
   <link href="/client/beam.css" rel="stylesheet" type="text/css">
-</head>
+  <script type="text/javascript" src="/client/beam.js"></script> 
+  <script type="text/javascript" src="/client/general.js"></script> 
+ </head>
 <body>
  <div class="logo"><a href="/"><img src="/client/gwene.png"></a></div>
  <div class="thread">
